[tool.poetry]
name = "qsa"
version = "0.0.0"
description = "QGIS Server Administration"
authors = ["Paul Blottiere <blottiere.paul@gmail.com>"]

[tool.poetry.dependencies]
python = ">=3.10"
click = "8.1.7"
tabulate = "^0.9.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.scripts]
'qsa' = 'qsa.cli:cli'
